[package]
name = "xr"
version = "0.1.0"
edition = "2021"
authors = ["Noel Lopes <noel@ipg.pt>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
termcolor = "1.2"
walkdir = "2"
